Import sweetalert2 as npm package and add deps

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -6,6 +6,5 @@ show=toggleModal
 title="Ember CLI Sweet Alert"
 message="Awesome!"
 type="error"
-callback=(action 'testing')
-}}
-{{outlet}}
+callback=(action 'testing')}}
+
