Upgrade Ember to 3.7

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <h2 id="title">Welcome to Ember</h2>
 
 <hr>
-<a class="toggle1" href="#" {{action 'toggle'}}>Toggle</a>
+<a class="toggle1" href="#" {{action "toggle"}}>Toggle</a>
 
 {{sweet-alert "Ember Sweet Alert" "Awesome!" "success"
   show=toggleModal
