[Refactor] Use native class syntax for Sweet Alert service

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -19,7 +19,7 @@
   @title="Submit email to run ajax request"
   @input="email"
   @showCancelButton={{true}}
-  @confirmButtonText="submit"
+  @confirmButtonText="Send Email"
   @allowOutsideClick={{false}}
   @preConfirm={{this.loading}}
   @onConfirm={{this.updateEmail}}
