[Feature] Upgrade Sweet Alert from v8 to v9

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -7,7 +7,7 @@
 <SweetAlert
   @title="Ember Sweet Alert"
   @text="Awesome!"
-  @type="success"
+  @icon="success"
   @show={{this.toggleModal}}
   @onOpen={{this.reset}}
   @onConfirm={{this.openEmail}}
