--- a/addon/components/sweet-alert.hbs
+++ b/addon/components/sweet-alert.hbs
@@ -1,5 +1,6 @@
-<div aria-hidden="true">
-  {{#if this.isOpen}}
-    <span {{did-insert this.fire}} aria-hidden="true"></span>
-  {{/if}}
-</div>
+<span
+  aria-hidden="true"
+  {{did-insert this.fire this.isOpen}}
+  {{did-update this.fire this.isOpen}}
+  ...attributes
+></span>
